[gd_scene load_steps=12 format=3 uid="uid://djs38cy8bwdv7"]

[ext_resource type="Script" uid="uid://d14fdqbjlksab" path="res://Objects/Enemy/enemy_base.gd" id="1_8e4qo"]
[ext_resource type="Texture2D" uid="uid://cseoedy4scsdr" path="res://icon.svg" id="2_ldf1s"]
[ext_resource type="Script" uid="uid://couw105c3bde4" path="res://addons/godot_state_charts/state_chart.gd" id="2_xt13y"]
[ext_resource type="Script" uid="uid://jk2jm1g6q853" path="res://addons/godot_state_charts/compound_state.gd" id="3_0a3m8"]
[ext_resource type="Script" uid="uid://cytafq8i1y8qm" path="res://addons/godot_state_charts/atomic_state.gd" id="4_d1qs5"]
[ext_resource type="PackedScene" uid="uid://bcwkugn6v3oy7" path="res://addons/godot_state_charts/utilities/state_chart_debugger.tscn" id="6_0a3m8"]
[ext_resource type="Script" uid="uid://cf1nsco3w0mf6" path="res://addons/godot_state_charts/transition.gd" id="6_d1qs5"]
[ext_resource type="PackedScene" uid="uid://vkpjfxaspyyn" path="res://Objects/Hurtbox/hurtbox.tscn" id="8_ptc2t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0a3m8"]
size = Vector2(20, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ptc2t"]
size = Vector2(44, 47)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mvwl2"]
size = Vector2(22, 23)

[node name="EnemyBase" type="Node2D" groups=["enemy"]]
script = ExtResource("1_8e4qo")
enemy_name = null
speed = null
max_health = null
damage = null
attack_speed = null

[node name="StateChartDebugger" parent="." instance=ExtResource("6_0a3m8")]
visible = false
offset_left = -156.0
offset_top = -277.0
offset_right = 156.0
offset_bottom = -53.0
enabled = false
initial_node_to_watch = NodePath("../StateChart")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("2_xt13y")
metadata/_custom_type_script = "uid://couw105c3bde4"

[node name="CompoundState" type="Node" parent="StateChart"]
script = ExtResource("3_0a3m8")
initial_state = NodePath("Running")
metadata/_custom_type_script = "uid://jk2jm1g6q853"

[node name="Running" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("4_d1qs5")

[node name="ToAttacking" type="Node" parent="StateChart/CompoundState/Running"]
script = ExtResource("6_d1qs5")
to = NodePath("../../Attacking")
event = &"to_attacking"
delay_in_seconds = "0.0"

[node name="ToStaggered" type="Node" parent="StateChart/CompoundState/Running"]
script = ExtResource("6_d1qs5")
to = NodePath("../../Staggered")
event = &"ToStaggered"
delay_in_seconds = "0.0"

[node name="Attacking" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("4_d1qs5")

[node name="ToStaggered" type="Node" parent="StateChart/CompoundState/Attacking"]
script = ExtResource("6_d1qs5")
to = NodePath("../../Staggered")
event = &"ToStaggered"
delay_in_seconds = "0.0"

[node name="Staggered" type="Node" parent="StateChart/CompoundState"]
script = ExtResource("4_d1qs5")

[node name="ToAttacking" type="Node" parent="StateChart/CompoundState/Staggered"]
script = ExtResource("6_d1qs5")
to = NodePath("../../Attacking")
event = &"to_attacking"
delay_in_seconds = "0.0"

[node name="ToRunning" type="Node" parent="StateChart/CompoundState/Staggered"]
script = ExtResource("6_d1qs5")
to = NodePath("../../Running")
event = &"to_running"
delay_in_seconds = "0.0"

[node name="AttackSpeedTimer" type="Timer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.49999997)
texture = ExtResource("2_ldf1s")

[node name="WallDetector" type="Area2D" parent="."]
position = Vector2(20, 0)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallDetector"]
shape = SubResource("RectangleShape2D_0a3m8")
debug_color = Color(1, 0.8115231, 0, 0.41960785)

[node name="HurtboxBody" parent="." instance=ExtResource("8_ptc2t")]

[node name="CollisionShape2D" parent="HurtboxBody" index="0"]
position = Vector2(0, 11.5)
shape = SubResource("RectangleShape2D_ptc2t")

[node name="HurtboxHead" parent="." instance=ExtResource("8_ptc2t")]
hurtbox_type = 1

[node name="CollisionShape2D" parent="HurtboxHead" index="0"]
position = Vector2(0, -23.5)
shape = SubResource("RectangleShape2D_mvwl2")
debug_color = Color(0, 0.20228878, 0.70196074, 0.41960785)

[connection signal="died" from="." to="." method="_on_died"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/Running" to="." method="_on_running_state_physics_processing"]
[connection signal="state_entered" from="StateChart/CompoundState/Attacking" to="." method="_on_attacking_state_entered"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/Attacking" to="." method="_on_attacking_state_physics_processing"]
[connection signal="timeout" from="AttackSpeedTimer" to="." method="_on_attack_speed_timer_timeout"]
[connection signal="area_entered" from="WallDetector" to="." method="_on_wall_detector_area_entered"]

[editable path="HurtboxBody"]
[editable path="HurtboxHead"]
